--- a/portfolios/views/portfolio/homepage.ejs
+++ b/portfolios/views/portfolio/homepage.ejs
@@ -60,8 +60,6 @@
           <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
           <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li>
           <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
-          <li class="consultation"><a href="/consultation" class="nav-link scrollto"><i class="bx bxs-message-square-detail"></i> <span>Consultation</span></a></li>
-          <li class="university"><a href="/university" class="nav-link scrollto"><i class="bx bxs-school"></i> <span>University</span></a></li>
 
         </ul>
       </nav><!-- .nav-menu -->
@@ -320,6 +318,42 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
+              <h4>Commvault Intern, Engineering</h4>
+              <h5>May 2024 - August 2024</h5>
+              <p><em>Houston, TX | Remote | Hybrid</em></p>
+              <ul>
+                <li>Developed and implemented comprehensive unit and integration tests for server-side components using Jest and mock objects, improving code reliability and facilitating easier maintenance.</li>
+                <li>Engineered a dynamic web-based reporting system that parses raw data files and generates interactive HTML reports, allowing users to drill down into subsystem performance metrics (pass/skip/fail rates).</li>
+                <li>Utilized C++, C#, and Python for various development tasks, demonstrating proficiency in object-oriented programming and memory management.</li>
+                <li>Implemented multithreaded applications to optimize performance in data-intensive operations.</li>
+                <li>Designed and queried complex data structures in SQL Server, writing efficient stored procedures and optimizing query performance.</li>
+                <li>Collaborated with the development team to troubleshoot and resolve technical issues, contributing to improved product stability and user experience.</li>
+                <li>Gained hands-on experience with version control systems (e.g., Git) and agile development methodologies.</li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>BCG Data Science Job Simulation on Forage</h4>
+              <h5>February 2024 - March 2024</h5>
+              <p><em>Remote</em></p>
+              <ul>
+                <li>Completed a customer churn analysis simulation for XYZ Analytics, demonstrating advanced data analytics skills, identifying essential client data, and outlining a strategic investigation approach.</li>
+                <li>Conducted efficient data analysis using Python, including Pandas and NumPy. Employed data visualization techniques for insightful trend interpretation.</li>
+                <li>Completed the engineering and optimization of a random forest model, achieving an 85% accuracy rate in predicting customer churn.</li>
+                <li>Completed a concide executive summary for the Associate Director, delivering actionable insights for informed decision-making based on the analysis.</li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Office of the Chief Information Officer</h4>
+              <h5>Jan 2023 - May 2023</h5>
+              <p><em>NASA Marshall Space Flight Center | Huntsville, AL | Remote</em></p>
+              <ul>
+                <li>Worked with the Marshall Space Flight Center, Office of the Chief Information Officer to gather, develop, validate, and recommend business, technical and functional requirements.</li>
+                <li>Reviewed NASA faculty code to maintain rooms stability for client's acknowledgement to locate rooms in MSFC.</li>
+                <li>Oversaw the development and maintenance of new and old software.</li>
+                <li>Promoted the development of a positive and knowledgeable work environment by training and mentoring junior developers and development bootcamo participants.</li>
+              </ul>
+            </div>
+            <div class="resume-item">
               <h4>Allied Universal Security Officer with Great Computer Skills</h4>
               <h5>2021 - 2022</h5>
               <p><em>Houston, TX </em></p>
@@ -330,40 +364,6 @@
                 <li>Collaborated with IT teams to develop and implement incident response plans, ensuring a swift and effective response to cybersecurity incidents.</li>
                 <li>Assessed and addressed security risks through the application of encryption techniques to protect sensitive data in transit and at rest.</li>
                 <li>Provided security awareness training to employees, fostering a culture of cybersecurity awareness throughout the organization.</li>
-              </ul>
-            </div>
-            <div class="resume-item">
-              <h4>Office of the Chief Information Officer</h4>
-              <h5>Jan 2023 - May 2023</h5>
-              <p><em>NASA Marshall Space Flight Center | Huntsville, AL</em></p>
-              <ul>
-                <li>Worked with the Marshall Space Flight Center, Office of the Chief Information Officer to gather, develop, validate, and recommend business, technical and functional requirements.</li>
-                <li>Reviewed NASA faculty code to maintain rooms stability for client's acknowledgement to locate rooms in MSFC.</li>
-                <li>Oversaw the development and maintenance of new and old software.</li>
-                <li>Promoted the development of a positive and knowledgeable work environment by training and mentoring junior developers and development bootcamo participants.</li>
-              </ul>
-            </div>
-            <div class="resume-item">
-              <h4>BCG Data Science Job Simulation on Forage</h4>
-              <h5>February 2024 - March 2024</h5>
-              <p><em>Houston, TX</em></p>
-              <ul>
-                <li>Completed a customer churn analysis simulation for XYZ Analytics, demonstrating advanced data analytics skills, identifying essential client data, and outlining a strategic investigation approach.</li>
-                <li>Conducted efficient data analysis using Python, including Pandas and NumPy. Employed data visualization techniques for insightful trend interpretation.</li>
-                <li>Completed the engineering and optimization of a random forest model, achieving an 85% accuracy rate in predicting customer churn.</li>
-                <li>Completed a concide executive summary for the Associate Director, delivering actionable insights for informed decision-making based on the analysis.</li>
-              </ul>
-            </div>
-            <div class="resume-item">
-              <h4>Commvault Intern, Engineering</h4>
-              <h5>May 2024 - August 2024</h5>
-              <p><em>Houston, TX</em></p>
-              <ul>
-                <li>Work with the development team to gain practical experience in product development.</li>
-                <li>Utilize programming languages such as C++, C#, Java, Python, etc.</li>
-                <li>Familiarity with pointers, multithreading, and data structures.</li>
-                <li>Assost with SQL Server database programming and writing queries.</li>
-                <li>Troubleshoot and resolve technical issues.</li>
               </ul>
             </div>
           </div>
@@ -385,21 +385,21 @@
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">Data</li>
+              <li data-filter=".filter-data">Data</li>
               <li data-filter=".filter-web">Web</li>
-              <li data-filter=".filter-card">App</li>
+              <li data-filter=".filter-app">App</li>
             </ul>
           </div>
         </div>
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-data">
             <div class="portfolio-wrap">
               <img src="/img/portfolio/global-data-transfer.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="/img/portfolio/global-data-transfer.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Data 1"><i class="bx bx-plus"></i></a>
-                <a href="https://github.com/EOlaw/global-data-on-sustainable-energy" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="/telecom" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -414,12 +414,12 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-data">
             <div class="portfolio-wrap">
               <img src="/img/portfolio/sea.jpeg" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="/img/portfolio/sea.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Data 2"><i class="bx bx-plus"></i></a>
-                <a href="https://github.com/EOlaw/sea_level_predictor" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="/telcom" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
