--- a/university/views/users/register.ejs
+++ b/university/views/users/register.ejs
@@ -7,7 +7,7 @@
                         alt="" class="card-img-top" />
                     <div class="card-body">
                         <h5 class="card-title">Register</h5>
-                        <form action="/user/register" method="POST" class="validated-form" novalidate>
+                        <form action="/university/user/register" method="POST" class="validated-form" novalidate>
                             <!-- Role Selection Buttons -->
                             <div class="text-center mb-3">
                                 <h5>Are you a:</h5>
