--- a/university/views/users/login.ejs
+++ b/university/views/users/login.ejs
@@ -18,7 +18,7 @@
                 </div>
                <div class="card-body">
                    <h5 class="card-title">Login</h5>
-                   <form action="/user/login" method="POST" class="validated-form" novalidate>
+                   <form action="/university/user/login" method="POST" class="validated-form" novalidate>
                        <div class="mb-3">
                            <label class="form-label" for="username">Username</label>
                            <input class="form-control" type="text" id="username" name="username" autofocus required>
@@ -37,7 +37,7 @@
                        <input type="hidden" name="role" id="role"> <!-- Hidden field to store selected role -->
                        <button class="btn btn-success btn-block">Login</button>
                    </form>
-                   <form action="/user/register" class="text-center">
+                   <form action="/university/user/register" class="text-center">
                        <h5>Need an account?<button class="btn btn-outline-primary btn-block">Register</button></h5>
                    </form>
                </div>
