--- a/portfolios/views/portfolio/homepage.ejs
+++ b/portfolios/views/portfolio/homepage.ejs
@@ -139,7 +139,7 @@
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
             <div class="count-box">
               <i class="bi bi-emoji-smile"></i>
-              <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="30" data-purecounter-duration="1" class="purecounter"></span>
               <p><strong>Happy Clients</strong></p>
             </div>
           </div>
@@ -147,7 +147,7 @@
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
             <div class="count-box">
               <i class="bi bi-journal-richtext"></i>
-              <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="40" data-purecounter-duration="1" class="purecounter"></span>
               <p><strong>Projects</strong></p>
             </div>
           </div>
@@ -568,7 +568,7 @@
                 </p>
                 <img src="/img/testimonials/yoel.jpg" class="testimonial-img" alt="">
                 <h3>Yoel Yoel</h3>
-                <h4>Cybersecurity</h4>
+                <h4>G.R.C. Consultant</h4>
               </div>
             </div><!-- End testimonial item -->
 
