--- a/insightserenity/views/layouts/boilerplate.ejs
+++ b/insightserenity/views/layouts/boilerplate.ejs
@@ -28,44 +28,31 @@
 </head>
 
 <body class="d-flex flex-column vh-100">
-    <% try { %>
-        <%- include('../partials/navbar') %>
-    <% } catch (err) { %>
-        Error including navbar: <%= err.message %>
-    <% } %>
-
+    <%- include('../partials/navbar')%>
     <main class="">
-        <% try { %>
-            <%- include('../partials/flash') %>
-        <% } catch (err) { %>
-            Error including flash: <%= err.message %>
-        <% } %>
-        
+        <%- include('../partials/flash')%>
         <%- body %>
     </main>
-
-    <% try { %>
-        <%- include('../partials/footer') %>
-    <% } catch (err) { %>
-        Error including footer: <%= err.message %>
-    <% } %>
-
-    <!-- Scripts -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
+    <%- include('../partials/footer')%>
+</body>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" 
+        integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+        crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 
     <!-- Vendor JS Files -->
-    <script src="/insightserenity/public/lib/vendor/purecounter/purecounter_vanilla.js"></script>
-    <script src="/insightserenity/public/lib/vendor/aos/aos.js"></script>
-    <script src="/insightserenity/public/lib/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="/insightserenity/public/lib/vendor/glightbox/js/glightbox.min.js"></script>
-    <script src="/insightserenity/public/lib/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-    <script src="/insightserenity/public/lib/vendor/swiper/swiper-bundle.min.js"></script>
-    <script src="/insightserenity/public/lib/vendor/php-email-form/validate.js"></script>
+  <script src="/insightserenity/public/lib/vendor/purecounter/purecounter_vanilla.js"></script>
+  <script src="/insightserenity/public/lib/vendor/aos/aos.js"></script>
+  <script src="/insightserenity/public/lib/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="/insightserenity/public/lib/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="/insightserenity/public/lib/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="/insightserenity/public/lib/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="/insightserenity/public/lib/vendor/php-email-form/validate.js"></script>
 
-    <!-- Template Main JS File -->
-    <script src="/insightserenity/public/js/main.js"></script>
-</body>
+  <!-- Template Main JS File -->
+  <script src="/insightserenity/public/js/main.js"></script>
 
 </html>
