--- a/insightserenity/views/error.ejs
+++ b/insightserenity/views/error.ejs
@@ -27,7 +27,7 @@
                     <h1 class="display-1"><%= err.statusCode %></h1>
                     <h1 class="mb-4"><%= err.message %></h1>
                     <p class="mb-4">We’re sorry, the page you have looked for does not exist in our website! Maybe go to our home page or try to use a search?</p>
-                    <a class="btn btn-primary rounded-pill py-3 px-5" href="/">Go Back To Home</a>
+                    <button class="btn btn-primary rounded-pill py-3 px-5" onclick="goBack()">Go Back</button>
                 <% } else { %>
                     <div class="alert alert-danger" role="alert">
                         <h4 class="alert-heading"><%= err ? err.message : 'An unexpected error occurred' %></h4>
@@ -40,3 +40,9 @@
         </div>
     </div>
 </div>
+
+<script>
+    function goBack() {
+        window.history.back();
+    }
+</script>
