--- a/insightserenity/views/consultants/profile.ejs
+++ b/insightserenity/views/consultants/profile.ejs
@@ -125,6 +125,7 @@
                   </tbody>
               </table>
               </div>
+              <p><a href="/insightserenity/consultant/consultations">Consultations</a></p>
             </div>
           </div>
         </div>
@@ -138,6 +139,5 @@
           </form>
       <% } %>
       </div>
-      
     </div>
 </main>
